# com-port-manager

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
github/.workflows/: main.yml
include/: com-api.hpp  hardware.hpp  term-io.hpp
src/: main.cpp
src/hardware/: RingBuffer.cpp  hardware.cpp
src/modules/com-api/: CMakeLists.txt  com-api-wrappers.cpp  com-api.cpp
src/modules/term-io/: CMakeLists.txt  term-io.cpp
